--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -35,7 +35,7 @@
         @media #{$tablet} {
             height: 90px;
             padding: 5px 0 0 14px;
-            border-radius: 0;
+            border-radius: 0 !important;
             margin: 0;
         }
 
