calculator visual area fixed

--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -579,51 +579,82 @@
                 justify-content: center;
                 align-items: center;
                 width: 10px;
-                height: 65px;
-                background: rgba(255, 255, 255, 0.40);
+                height: 45px;
+                background: rgba(255, 255, 255, 0.20);
                 box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.25);
                 margin: auto 0;
                 z-index: 1;
 
                 @media #{$tablet} {
-                    width: 105px;
+                    width: 45px;
                     height: 30px;
                 }
 
-                &::before, &::after {
-                    content: '';
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: linear-gradient(0deg, rgba(255, 255, 255, 0.2) 100%, rgba(255, 255, 255, 0) 0%);
+                    z-index: -1;
+                    top: 0;
+                    left: 0;
+                }
+                
+                &>div {
                     position: absolute;
                     width: 10px;
-                    height: 10px;
-                    background-color: #0081C2;
-                    left: 0;
+                    height:10px;
+                    overflow: hidden;
 
                     @media #{$tablet} {
                         width: 30px;
                         height: 30px;
-                        background-color: #0063A5;
-                        left: auto;
-                        top: 0;
                     }
-                }
 
-                &::before {
-                    top: 0;
-                    border-radius: 0 0 10px 10px;
+                    &>div {
+                        width: 100%;
+                        height: 100%;
+                        background-color: transparent;
+                        box-shadow: 0 1px 0 10px rgba(225, 225, 255, 0.4);
+                    }
 
-                    @media #{$tablet} {
+                    &:nth-of-type(1) {
+                        top: -10px;
                         left: 0;
-                        border-radius: 0 30px 30px 0;
+
+                        @media #{$tablet} {
+                            top: 0;
+                            left: -30px;
+                        }
+
+                        &>div {
+                            border-radius: 0 0 50% 50%;
+
+                            @media #{$tablet} {
+                                border-radius: 0 50% 50% 0;
+                            }
+                        }
                     }
-                }
 
-                &::after {
-                    bottom: 0;
-                    border-radius: 10px 10px 0 0;
+                    &:nth-of-type(2) {
+                        bottom: -10px;
+                        left: 0;
 
-                    @media #{$tablet} {
-                        right: 0;
-                        border-radius: 30px 0 0 30px;
+                        @media #{$tablet} {
+                            top: 0;
+                            bottom: auto;
+                            left: auto;
+                            right: -30px;
+                        }
+
+                        &>div {
+                            border-radius: 50% 50% 0 0;
+
+                            @media #{$tablet} {
+                                border-radius: 50% 0 0 50%;
+                            }
+                        }
                     }
                 }
             }
