--- a/css/style.css
+++ b/css/style.css
@@ -2443,53 +2443,82 @@ body {
   justify-content: center;
   align-items: center;
   width: 10px;
-  height: 65px;
-  background: rgba(255, 255, 255, 0.4);
+  height: 45px;
+  background: rgba(255, 255, 255, 0.2);
   box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.25);
   margin: auto 0;
   z-index: 1;
 }
 @media screen and (max-width: 999px) {
   .calculator__visual__area > span {
-    width: 105px;
+    width: 45px;
     height: 30px;
-  }
-}
-.calculator__visual__area > span::before, .calculator__visual__area > span::after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #0081C2;
-  left: 0;
-}
-@media screen and (max-width: 999px) {
-  .calculator__visual__area > span::before, .calculator__visual__area > span::after {
-    width: 30px;
-    height: 30px;
-    background-color: #0063A5;
-    left: auto;
-    top: 0;
   }
 }
 .calculator__visual__area > span::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2) 100%, rgba(255, 255, 255, 0) 0%);
+  z-index: -1;
   top: 0;
-  border-radius: 0 0 10px 10px;
+  left: 0;
+}
+.calculator__visual__area > span > div {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  overflow: hidden;
 }
 @media screen and (max-width: 999px) {
-  .calculator__visual__area > span::before {
-    left: 0;
-    border-radius: 0 30px 30px 0;
+  .calculator__visual__area > span > div {
+    width: 30px;
+    height: 30px;
   }
 }
-.calculator__visual__area > span::after {
-  bottom: 0;
-  border-radius: 10px 10px 0 0;
+.calculator__visual__area > span > div > div {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  box-shadow: 0 1px 0 10px rgba(225, 225, 255, 0.4);
+}
+.calculator__visual__area > span > div:nth-of-type(1) {
+  top: -10px;
+  left: 0;
 }
 @media screen and (max-width: 999px) {
-  .calculator__visual__area > span::after {
-    right: 0;
-    border-radius: 30px 0 0 30px;
+  .calculator__visual__area > span > div:nth-of-type(1) {
+    top: 0;
+    left: -30px;
+  }
+}
+.calculator__visual__area > span > div:nth-of-type(1) > div {
+  border-radius: 0 0 50% 50%;
+}
+@media screen and (max-width: 999px) {
+  .calculator__visual__area > span > div:nth-of-type(1) > div {
+    border-radius: 0 50% 50% 0;
+  }
+}
+.calculator__visual__area > span > div:nth-of-type(2) {
+  bottom: -10px;
+  left: 0;
+}
+@media screen and (max-width: 999px) {
+  .calculator__visual__area > span > div:nth-of-type(2) {
+    top: 0;
+    bottom: auto;
+    left: auto;
+    right: -30px;
+  }
+}
+.calculator__visual__area > span > div:nth-of-type(2) > div {
+  border-radius: 50% 50% 0 0;
+}
+@media screen and (max-width: 999px) {
+  .calculator__visual__area > span > div:nth-of-type(2) > div {
+    border-radius: 50% 0 0 50%;
   }
 }
 
